--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.25.3",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^15.7.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
